Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-14539

[C++] Dataset scanner test failing a DCHECK

    XMLWordPrintableJSON

Details

    Description

      While from a PR, this appears unrelated to the PR.

      Log: https://github.com/apache/arrow/runs/4069711313?check_suite_focus=true

      [ RUN      ] TestScannerThreading/TestScanner.TakeIndices/7AsyncThreaded2d16b1024r
      /Users/runner/work/arrow/arrow/cpp/src/arrow/util/future.cc:309:  Check failed: !IsFutureFinished(state_) Future already marked finished
      0   libarrow.700.0.0.dylib              0x0000000108fe3ee4 _ZN5arrow4util7CerrLog14PrintBackTraceEv + 52
      1   libarrow.700.0.0.dylib              0x0000000108fe3e02 _ZN5arrow4util7CerrLogD2Ev + 98
      2   libarrow.700.0.0.dylib              0x0000000108fe3d65 _ZN5arrow4util7CerrLogD1Ev + 21
      3   libarrow.700.0.0.dylib              0x0000000108fe3d8c _ZN5arrow4util7CerrLogD0Ev + 28
      4   libarrow.700.0.0.dylib              0x0000000108fe3c72 _ZN5arrow4util8ArrowLogD2Ev + 82
      5   libarrow.700.0.0.dylib              0x0000000108fe3ca5 _ZN5arrow4util8ArrowLogD1Ev + 21
      6   libarrow.700.0.0.dylib              0x0000000108fab4d0 _ZN5arrow18ConcreteFutureImpl22DoMarkFinishedOrFailedENS_11FutureStateE + 304
      7   libarrow.700.0.0.dylib              0x0000000108fa601a _ZN5arrow18ConcreteFutureImpl12DoMarkFailedEv + 26
      8   libarrow.700.0.0.dylib              0x0000000108fa5fed _ZN5arrow10FutureImpl10MarkFailedEv + 29
      9   arrow-dataset-scanner-test          0x00000001040357f8 _ZN5arrow6FutureINS_8internal5EmptyEE14DoMarkFinishedENS_6ResultIS2_EE + 168
      10  arrow-dataset-scanner-test          0x0000000104035562 _ZN5arrow6FutureINS_8internal5EmptyEE12MarkFinishedIS2_vEEvNS_6StatusE + 98
      11  libarrow.700.0.0.dylib              0x0000000108f3673a _ZZN5arrow4util14AsyncTaskGroup15AddTaskUnlockedERKNS_6FutureINS_8internal5EmptyEEENS0_5Mutex5GuardEENK3$_1clERKNS_6StatusE + 170
      12  libarrow.700.0.0.dylib              0x0000000108f3668a _ZNO5arrow6FutureINS_8internal5EmptyEE21WrapStatusyOnComplete8CallbackIZNS_4util14AsyncTaskGroup15AddTaskUnlockedERKS3_NS6_5Mutex5GuardEE3$_1EclERKNS_10FutureImplE + 58
      13  libarrow.700.0.0.dylib              0x0000000108f3661b _ZN5arrow8internal6FnOnceIFvRKNS_10FutureImplEEE6FnImplINS_6FutureINS0_5EmptyEE21WrapStatusyOnComplete8CallbackIZNS_4util14AsyncTaskGroup15AddTaskUnlockedERKSA_NSD_5Mutex5GuardEE3$_1EEE6invokeES4_ + 59
      14  libarrow.700.0.0.dylib              0x0000000108fac4c5 _ZNO5arrow8internal6FnOnceIFvRKNS_10FutureImplEEEclES4_ + 85
      15  libarrow.700.0.0.dylib              0x0000000108fabb6b _ZN5arrow18ConcreteFutureImpl21RunOrScheduleCallbackERKNSt3__110shared_ptrINS_10FutureImplEEEONS3_14CallbackRecordEb + 779
      16  libarrow.700.0.0.dylib              0x0000000108fab64a _ZN5arrow18ConcreteFutureImpl22DoMarkFinishedOrFailedENS_11FutureStateE + 682
      17  libarrow.700.0.0.dylib              0x0000000108fa601a _ZN5arrow18ConcreteFutureImpl12DoMarkFailedEv + 26
      18  libarrow.700.0.0.dylib              0x0000000108fa5fed _ZN5arrow10FutureImpl10MarkFailedEv + 29
      19  arrow-dataset-scanner-test          0x00000001040357f8 _ZN5arrow6FutureINS_8internal5EmptyEE14DoMarkFinishedENS_6ResultIS2_EE + 168
      20  arrow-dataset-scanner-test          0x0000000104035562 _ZN5arrow6FutureINS_8internal5EmptyEE12MarkFinishedIS2_vEEvNS_6StatusE + 98
      21  libarrow.700.0.0.dylib              0x00000001093f55d4 _ZZN5arrow8internal8Executor6SubmitIZZNS_7compute7MapNode10SubmitTaskENSt3__18functionIFNS_6ResultINS3_9ExecBatchEEES8_EEES8_ENK3$_1clEvEUlvE_JENS_6FutureINS0_5EmptyEEEEENS7_IT1_EENS0_9TaskHintsENS_9StopTokenEOT_DpOT0_EN3$_4clERKNS_6StatusE + 100
      22  libarrow.700.0.0.dylib              0x00000001093f550b _ZN5arrow8internal6FnOnceIFvRKNS_6StatusEEE6FnImplIZNS0_8Executor6SubmitIZZNS_7compute7MapNode10SubmitTaskENSt3__18functionIFNS_6ResultINSA_9ExecBatchEEESF_EEESF_ENK3$_1clEvEUlvE_JENS_6FutureINS0_5EmptyEEEEENSE_IT1_EENS0_9TaskHintsENS_9StopTokenEOT_DpOT0_E3$_4E6invokeES4_ + 59
      23  libarrow.700.0.0.dylib              0x0000000109016095 _ZNO5arrow8internal6FnOnceIFvRKNS_6StatusEEEclES4_ + 85
      24  libarrow.700.0.0.dylib              0x000000010902121e _ZN5arrow8internalL10WorkerLoopENSt3__110shared_ptrINS0_10ThreadPool5StateEEENS1_15__list_iteratorINS1_6threadEPvEE + 974
      25  libarrow.700.0.0.dylib              0x0000000109020e1f _ZZN5arrow8internal10ThreadPool21LaunchWorkersUnlockedEiENK3$_3clEv + 95
      26  libarrow.700.0.0.dylib              0x0000000109020d6d _ZNSt3__1L8__invokeIZN5arrow8internal10ThreadPool21LaunchWorkersUnlockedEiE3$_3JEEEDTclclsr3std3__1E7forwardIT_Efp_Espclsr3std3__1E7forwardIT0_Efp0_EEEOS5_DpOS6_ + 29
      27  libarrow.700.0.0.dylib              0x0000000109020cd5 _ZNSt3__1L16__thread_executeINS_10unique_ptrINS_15__thread_structENS_14default_deleteIS2_EEEEZN5arrow8internal10ThreadPool21LaunchWorkersUnlockedEiE3$_3JEJEEEvRNS_5tupleIJT_T0_DpT1_EEENS_15__tuple_indicesIJXspT2_EEEE + 37
      28  libarrow.700.0.0.dylib              0x0000000109020426 _ZNSt3__1L14__thread_proxyINS_5tupleIJNS_10unique_ptrINS_15__thread_structENS_14default_deleteIS3_EEEEZN5arrow8internal10ThreadPool21LaunchWorkersUnlockedEiE3$_3EEEEEPvSC_ + 118
      29  libsystem_pthread.dylib             0x00007fff7040f109 _pthread_start + 148
      30  libsystem_pthread.dylib             0x00007fff7040ab8b thread_start + 15
      Found core dump, printing backtrace:
      (lldb) target create --core "core.arrow-dataset-sc.74586"
      Core file '/Users/runner/work/arrow/arrow/build/cpp/build/test-work/arrow-dataset-scanner-test/core.arrow-dataset-sc.74586' (x86_64) was loaded.(lldb) thread backtrace all -e true
          frame #35: 0x0000000108fabb6b libarrow.700.0.0.dylib`arrow::ConcreteFutureImpl::RunOrScheduleCallback(self=std::__1::shared_ptr<arrow::FutureImpl>::element_type @ 0x00007f9b5d4bdbf0 strong=3 weak=3, callback_record=0x00007f9b5d41b480, in_add_callback=false) at future.cc:298:7
          frame #36: 0x0000000108fab64a libarrow.700.0.0.dylib`arrow::ConcreteFutureImpl::DoMarkFinishedOrFailed(this=0x00007f9b5d4bdbf0, state=SUCCESS) at future.cc:327:7
          frame #37: 0x0000000108fa5fca libarrow.700.0.0.dylib`arrow::ConcreteFutureImpl::DoMarkFinished(this=0x00007f9b5d4bdbf0) at future.cc:231:27
          frame #38: 0x0000000108fa5f9d libarrow.700.0.0.dylib`arrow::FutureImpl::MarkFinished(this=0x00007f9b5d4bdbf0) at future.cc:383:60
          frame #39: 0x00000001040357cd arrow-dataset-scanner-test`arrow::Future<arrow::internal::Empty>::DoMarkFinished(this=0x000070000d9f1c08, res=<unavailable>) at future.h:712:14
          frame #40: 0x0000000104035562 arrow-dataset-scanner-test`void arrow::Future<arrow::internal::Empty>::MarkFinished<arrow::internal::Empty, void>(this=0x000070000d9f1c08, s=<unavailable>) at future.h:463:12
          frame #41: 0x00000001093f4f0d libarrow.700.0.0.dylib`std::__1::enable_if<((!(std::is_void<arrow::Status>::value)) && (!(is_future<arrow::Status>::value))) && ((!(arrow::Future<arrow::internal::Empty>::is_empty)) || (std::is_same<arrow::Status, arrow::Status>::value)), void>::type arrow::detail::ContinueFuture::operator(this=0x00007f9b5d4bdcd0, next=Future<arrow::internal::Empty> @ 0x000070000d9f1c08, f=0x00007f9b5d4bdcf0)<arrow::compute::MapNode::SubmitTask(std::__1::function<arrow::Result<arrow::compute::ExecBatch> (arrow::compute::ExecBatch)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()&, arrow::Status, arrow::Future<arrow::internal::Empty> >(arrow::Future<arrow::internal::Empty>, arrow::compute::MapNode::SubmitTask(std::__1::function<arrow::Result<arrow::compute::ExecBatch> (arrow::compute::ExecBatch)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()&) const at future.h:148:10
          frame #42: 0x00000001093f4df6 libarrow.700.0.0.dylib`decltype(__f=0x00007f9b5d4bdcd0, __args=0x00007f9b5d4bdce0, __args=0x00007f9b5d4bdcf0)(std::__1::forward<arrow::Future<arrow::internal::Empty>&>(fp0), std::__1::forward<arrow::compute::MapNode::SubmitTask(std::__1::function<arrow::Result<arrow::compute::ExecBatch> (arrow::compute::ExecBatch)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()&>(fp0))) std::__1::__invoke<arrow::detail::ContinueFuture&, arrow::Future<arrow::internal::Empty>&, arrow::compute::MapNode::SubmitTask(std::__1::function<arrow::Result<arrow::compute::ExecBatch> (arrow::compute::ExecBatch)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()&>(arrow::detail::ContinueFuture&, arrow::Future<arrow::internal::Empty>&, arrow::compute::MapNode::SubmitTask(std::__1::function<arrow::Result<arrow::compute::ExecBatch> (arrow::compute::ExecBatch)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()&) at type_traits:3545:1
          frame #43: 0x00000001093f4d8d libarrow.700.0.0.dylib`std::__1::__bind_return<arrow::detail::ContinueFuture, std::__1::tuple<arrow::Future<arrow::internal::Empty>, arrow::compute::MapNode::SubmitTask(std::__1::function<arrow::Result<arrow::compute::ExecBatch> (arrow::compute::ExecBatch)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()>, std::__1::tuple<>, __is_valid_bind_return<arrow::detail::ContinueFuture, std::__1::tuple<arrow::Future<arrow::internal::Empty>, arrow::compute::MapNode::SubmitTask(std::__1::function<arrow::Result<arrow::compute::ExecBatch> (arrow::compute::ExecBatch)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()>, std::__1::tuple<> >::value>::type std::__1::__apply_functor<arrow::detail::ContinueFuture, std::__1::tuple<arrow::Future<arrow::internal::Empty>, arrow::compute::MapNode::SubmitTask(__f=0x00007f9b5d4bdcd0, __bound_args=size=2, (null)=__tuple_indices<0, 1> @ 0x000070000d9f1c68, __args=size=0)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()>, 0ul, 1ul, std::__1::tuple<> >(arrow::detail::ContinueFuture&, std::__1::tuple<arrow::Future<arrow::internal::Empty>, arrow::compute::MapNode::SubmitTask(std::__1::function<arrow::Result<arrow::compute::ExecBatch> (arrow::compute::ExecBatch)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()>&, std::__1::__tuple_indices<0ul, 1ul>, std::__1::tuple<>&&) at functional:2845:12
          frame #44: 0x00000001093f4d29 libarrow.700.0.0.dylib`std::__1::__bind_return<arrow::detail::ContinueFuture, std::__1::tuple<arrow::Future<arrow::internal::Empty>, arrow::compute::MapNode::SubmitTask(std::__1::function<arrow::Result<arrow::compute::ExecBatch> (arrow::compute::ExecBatch)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()>, std::__1::tuple<>, __is_valid_bind_return<arrow::detail::ContinueFuture, std::__1::tuple<arrow::Future<arrow::internal::Empty>, arrow::compute::MapNode::SubmitTask(std::__1::function<arrow::Result<arrow::compute::ExecBatch> (arrow::compute::ExecBatch)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()>, std::__1::tuple<> >::value>::type std::__1::__bind<arrow::detail::ContinueFuture, arrow::Future<arrow::internal::Empty>&, arrow::compute::MapNode::SubmitTask(this=0x00007f9b5d4bdcd0)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()>::operator()<>() at functional:2878:20
          frame #45: 0x00000001093f4ca6 libarrow.700.0.0.dylib`arrow::internal::FnOnce<void ()>::FnImpl<std::__1::__bind<arrow::detail::ContinueFuture, arrow::Future<arrow::internal::Empty>&, arrow::compute::MapNode::SubmitTask(this=0x00007f9b5d4bdcc0)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()> >::invoke() at functional.h:152:42
          frame #46: 0x0000000109015fdd libarrow.700.0.0.dylib`arrow::internal::FnOnce<void ()>::operator(this=0x000070000d9f1e18)() && at functional.h:140:17
          frame #47: 0x0000000109021179 libarrow.700.0.0.dylib`arrow::internal::WorkerLoop(state=std::__1::shared_ptr<arrow::internal::ThreadPool::State>::element_type @ 0x00007f9b5d4be638 strong=7 weak=1, it=std::__1::list<std::__1::thread, std::__1::allocator<std::__1::thread> >::iterator @ 0x000070000d9f1eb8) at thread_pool.cc:177:11
          frame #48: 0x0000000109020e1f libarrow.700.0.0.dylib`arrow::internal::ThreadPool::LaunchWorkersUnlocked(this=0x00007f9b5d604488)::$_3::operator()() const at thread_pool.cc:344:7
          frame #49: 0x0000000109020d6d libarrow.700.0.0.dylib`decltype(__f=0x00007f9b5d604488)::$_3>(fp)()) std::__1::__invoke<arrow::internal::ThreadPool::LaunchWorkersUnlocked(int)::$_3>(arrow::internal::ThreadPool::LaunchWorkersUnlocked(int)::$_3&&) at type_traits:3545:1
          frame #50: 0x0000000109020cd5 libarrow.700.0.0.dylib`void std::__1::__thread_execute<std::__1::unique_ptr<std::__1::__thread_struct, std::__1::default_delete<std::__1::__thread_struct> >, arrow::internal::ThreadPool::LaunchWorkersUnlocked(int)::$_3>(__t=size=2, (null)=__tuple_indices<> @ 0x000070000d9f1f58)::$_3>&, std::__1::__tuple_indices<>) at thread:273:5
          frame #51: 0x0000000109020426 libarrow.700.0.0.dylib`void* std::__1::__thread_proxy<std::__1::tuple<std::__1::unique_ptr<std::__1::__thread_struct, std::__1::default_delete<std::__1::__thread_struct> >, arrow::internal::ThreadPool::LaunchWorkersUnlocked(int)::$_3> >(__vp=0x00007f9b5d604480) at thread:284:5
          frame #52: 0x00007fff7040f109 libsystem_pthread.dylib`_pthread_start + 148
          frame #53: 0x00007fff7040ab8b libsystem_pthread.dylib`thread_start + 15
        thread #4, stop reason = signal SIGSTOP
          frame #0: 0x00007fff7034e33a libsystem_kernel.dylib`__pthread_kill + 10
          frame #1: 0x00007fff7040ee60 libsystem_pthread.dylib`pthread_kill + 430
          frame #2: 0x00007fff702d5808 libsystem_c.dylib`abort + 120
          frame #3: 0x0000000108fe3e0c libarrow.700.0.0.dylib`arrow::util::CerrLog::~CerrLog(this=0x00007f9b5d60d390) at logging.cc:72:7
          frame #4: 0x0000000108fe3d65 libarrow.700.0.0.dylib`arrow::util::CerrLog::~CerrLog(this=0x00007f9b5d60d390) at logging.cc:66:22
          frame #5: 0x0000000108fe3d8c libarrow.700.0.0.dylib`arrow::util::CerrLog::~CerrLog(this=0x00007f9b5d60d390) at logging.cc:66:22
          frame #6: 0x0000000108fe3c72 libarrow.700.0.0.dylib`arrow::util::ArrowLog::~ArrowLog(this=0x000070000da746e8) at logging.cc:250:5
          frame #7: 0x0000000108fe3ca5 libarrow.700.0.0.dylib`arrow::util::ArrowLog::~ArrowLog(this=0x000070000da746e8) at logging.cc:248:23
          frame #8: 0x0000000108fab4d0 libarrow.700.0.0.dylib`arrow::ConcreteFutureImpl::DoMarkFinishedOrFailed(this=0x00007f9b5d511d40, state=FAILURE) at future.cc:309:7
          frame #9: 0x0000000108fa601a libarrow.700.0.0.dylib`arrow::ConcreteFutureImpl::DoMarkFailed(this=0x00007f9b5d511d40) at future.cc:233:25
          frame #10: 0x0000000108fa5fed libarrow.700.0.0.dylib`arrow::FutureImpl::MarkFailed(this=0x00007f9b5d511d40) at future.cc:385:58
          frame #11: 0x00000001040357f8 arrow-dataset-scanner-test`arrow::Future<arrow::internal::Empty>::DoMarkFinished(this=0x00007f9b5d511bd8, res=<unavailable>) at future.h:714:14
          frame #12: 0x0000000104035562 arrow-dataset-scanner-test`void arrow::Future<arrow::internal::Empty>::MarkFinished<arrow::internal::Empty, void>(this=0x00007f9b5d511bd8, s=<unavailable>) at future.h:463:12
          frame #13: 0x0000000108f3673a libarrow.700.0.0.dylib`arrow::util::AsyncTaskGroup::AddTaskUnlocked(this=0x00007f9b5d4281d8, st=0x00007f9b5d607af0)::$_1::operator()(arrow::Status const&) const at async_util.cc:75:23
          frame #14: 0x0000000108f3668a libarrow.700.0.0.dylib`arrow::Future<arrow::internal::Empty>::WrapStatusyOnComplete::Callback<arrow::util::AsyncTaskGroup::AddTaskUnlocked(this=0x00007f9b5d4281d8, impl=0x00007f9b5d4332e0)::$_1>::operator()(arrow::FutureImpl const&) && at future.h:509:9
          frame #15: 0x0000000108f3661b libarrow.700.0.0.dylib`arrow::internal::FnOnce<void (arrow::FutureImpl const&)>::FnImpl<arrow::Future<arrow::internal::Empty>::WrapStatusyOnComplete::Callback<arrow::util::AsyncTaskGroup::AddTaskUnlocked(this=0x00007f9b5d4281d0, a=0x00007f9b5d4332e0)::$_1> >::invoke(arrow::FutureImpl const&) at functional.h:152:42
          frame #16: 0x0000000108fac4c5 libarrow.700.0.0.dylib`arrow::internal::FnOnce<void (arrow::FutureImpl const&)>::operator(this=0x00007f9b5d48fb10, a=0x00007f9b5d4332e0)(arrow::FutureImpl const&) && at functional.h:140:17
          frame #17: 0x0000000108fabb6b libarrow.700.0.0.dylib`arrow::ConcreteFutureImpl::RunOrScheduleCallback(self=std::__1::shared_ptr<arrow::FutureImpl>::element_type @ 0x00007f9b5d4332e0 strong=3 weak=3, callback_record=0x00007f9b5d48fb10, in_add_callback=false) at future.cc:298:7
          frame #18: 0x0000000108fab64a libarrow.700.0.0.dylib`arrow::ConcreteFutureImpl::DoMarkFinishedOrFailed(this=0x00007f9b5d4332e0, state=FAILURE) at future.cc:327:7
          frame #19: 0x0000000108fa601a libarrow.700.0.0.dylib`arrow::ConcreteFutureImpl::DoMarkFailed(this=0x00007f9b5d4332e0) at future.cc:233:25
          frame #20: 0x0000000108fa5fed libarrow.700.0.0.dylib`arrow::FutureImpl::MarkFailed(this=0x00007f9b5d4332e0) at future.cc:385:58
          frame #21: 0x00000001040357f8 arrow-dataset-scanner-test`arrow::Future<arrow::internal::Empty>::DoMarkFinished(this=0x000070000da74c60, res=<unavailable>) at future.h:714:14
          frame #22: 0x0000000104035562 arrow-dataset-scanner-test`void arrow::Future<arrow::internal::Empty>::MarkFinished<arrow::internal::Empty, void>(this=0x000070000da74c60, s=<unavailable>) at future.h:463:12
          frame #23: 0x00000001093f55d4 libarrow.700.0.0.dylib`arrow::Result<arrow::Future<arrow::internal::Empty> > arrow::internal::Executor::Submit<arrow::compute::MapNode::SubmitTask(this=0x00007f9b5d457ea8, st=0x000070000da74e08)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'(), arrow::Future<arrow::internal::Empty> >(arrow::internal::TaskHints, arrow::StopToken, arrow::compute::MapNode::SubmitTask(std::__1::function<arrow::Result<arrow::compute::ExecBatch> (arrow::compute::ExecBatch)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()&&)::$_4::operator()(arrow::Status const&) at thread_pool.h:158:15
          frame #24: 0x00000001093f550b libarrow.700.0.0.dylib`arrow::internal::FnOnce<void (arrow::Status const&)>::FnImpl<arrow::Result<arrow::Future<arrow::internal::Empty> > arrow::internal::Executor::Submit<arrow::compute::MapNode::SubmitTask(this=0x00007f9b5d457ea0, a=0x000070000da74e08)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'(), arrow::Future<arrow::internal::Empty> >(arrow::internal::TaskHints, arrow::StopToken, arrow::compute::MapNode::SubmitTask(std::__1::function<arrow::Result<arrow::compute::ExecBatch> (arrow::compute::ExecBatch)>, arrow::compute::ExecBatch)::$_1::operator()() const::'lambda'()&&)::$_4>::invoke(arrow::Status const&) at functional.h:152:42
          frame #25: 0x0000000109016095 libarrow.700.0.0.dylib`arrow::internal::FnOnce<void (arrow::Status const&)>::operator(this=0x000070000da74e30, a=0x000070000da74e08)(arrow::Status const&) && at functional.h:140:17
          frame #26: 0x000000010902121e libarrow.700.0.0.dylib`arrow::internal::WorkerLoop(state=std::__1::shared_ptr<arrow::internal::ThreadPool::State>::element_type @ 0x00007f9b5d4be638 strong=7 weak=1, it=std::__1::list<std::__1::thread, std::__1::allocator<std::__1::thread> >::iterator @ 0x000070000da74eb8) at thread_pool.cc:180:13
          frame #27: 0x0000000109020e1f libarrow.700.0.0.dylib`arrow::internal::ThreadPool::LaunchWorkersUnlocked(this=0x00007f9b5d430798)::$_3::operator()() const at thread_pool.cc:344:7
          frame #28: 0x0000000109020d6d libarrow.700.0.0.dylib`decltype(__f=0x00007f9b5d430798)::$_3>(fp)()) std::__1::__invoke<arrow::internal::ThreadPool::LaunchWorkersUnlocked(int)::$_3>(arrow::internal::ThreadPool::LaunchWorkersUnlocked(int)::$_3&&) at type_traits:3545:1
          frame #29: 0x0000000109020cd5 libarrow.700.0.0.dylib`void std::__1::__thread_execute<std::__1::unique_ptr<std::__1::__thread_struct, std::__1::default_delete<std::__1::__thread_struct> >, arrow::internal::ThreadPool::LaunchWorkersUnlocked(int)::$_3>(__t=size=2, (null)=__tuple_indices<> @ 0x000070000da74f58)::$_3>&, std::__1::__tuple_indices<>) at thread:273:5
          frame #30: 0x0000000109020426 libarrow.700.0.0.dylib`void* std::__1::__thread_proxy<std::__1::tuple<std::__1::unique_ptr<std::__1::__thread_struct, std::__1::default_delete<std::__1::__thread_struct> >, arrow::internal::ThreadPool::LaunchWorkersUnlocked(int)::$_3> >(__vp=0x00007f9b5d430790) at thread:284:5
          frame #31: 0x00007fff7040f109 libsystem_pthread.dylib`_pthread_start + 148
          frame #32: 0x00007fff7040ab8b libsystem_pthread.dylib`thread_start + 15
      ~/work/arrow/arrow/build/cpp/src/arrow/dataset 

      Attachments

        Issue Links

          Activity

            People

              westonpace Weston Pace
              lidavidm David Li
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 5h 20m
                  5h 20m