ARROW-14539: Addressing PR review comments.  Fixing up some test cases and adjusting the behavior of SerializedAsyncTaskGroup to match the new behavior of AsyncTaskGroup